--- a/lab3/app.yaml
+++ b/lab3/app.yaml
@@ -3,7 +3,9 @@ runtime: python38
 handlers:
 
 - url: /static
+  secure: always
   static_dir: static
 
 - url: /.*
+  secure: always
   script: auto
